--- a/hover.css
+++ b/hover.css
@@ -47,3 +47,22 @@
   -webkit-transform: scale(1.1);
   transform: scale(1.1);
 }
+
+.btn-hover {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  overflow: hidden;
+  -webkit-transition-duration: 0.2s;
+  transition-duration: 0.2s;
+  -webkit-transition-property: color, background-color;
+  transition-property: color, background-color;
+}
+.btn-hover:hover,
+.btn-hover:focus,
+.btn-hover:active {
+  background-color: #00ecd9;
+  color: white;
+}
