--- a/style.css
+++ b/style.css
@@ -7,16 +7,16 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
+li {
+  list-style: none;
+}
+
 .menu-nav {
-  background-color: #f3f1f1;
   display: flex;
+
+  background-color: #f3f1f1;
   padding: 30px 50px;
   position: relative;
-
-  /*
-  -webkit-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.2);
-  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.2);*/
 }
 
 .menu-nav a {
@@ -25,11 +25,10 @@ body {
 }
 
 .menu-nav li {
-  list-style: none;
-  margin-right: 45px;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-right: 45px;
 }
 
 .button {
@@ -51,7 +50,6 @@ body {
 }
 
 /* TOP BAR */
-
 .topbar {
   display: flex;
   justify-content: center;
@@ -173,105 +171,6 @@ body {
   font-size: 30px !important;
 }
 
-/* PLANSZE O PERSONACH */
-
-.section-overlay {
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-  color: rgba(0, 0, 0, 0.8);
-  padding: 50px 0;
-}
-
-.section-overlay-persona1 {
-  background-color: #eeecec;
-}
-
-.section-overlay-persona2 {
-  background-color: #d6d6d6;
-}
-
-.section-content {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-}
-
-.section-content-persona2 {
-  align-items: flex-end;
-}
-
-.section-field {
-  display: flex;
-  flex-direction: column;
-  align-content: center;
-  justify-content: space-evenly;
-  height: 100%;
-  width: 70%;
-  padding: 80px 0;
-}
-
-.section-queries {
-  display: flex;
-  flex-direction: column;
-  font-size: 18px;
-  margin-bottom: 55px;
-}
-
-.section-description {
-  font-size: 15px;
-  padding: 20px 30px;
-}
-
-.section-queries li {
-  text-decoration: none;
-  list-style: none;
-}
-
-.section-title-field {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.section-title {
-  font-size: 30px;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 700;
-  color: #ff7402;
-  margin-bottom: 45px;
-  text-align: center;
-}
-
-.slogan {
-  color: #000000da;
-  font-size: 38px;
-}
-
-.screen-image1,
-.screen-image2,
-.screen-image3 {
-  background-size: cover;
-  width: 300px;
-  height: 550px;
-
-  -webkit-box-shadow: 5px 5px 66px -9px rgba(179, 179, 179, 1);
-  -moz-box-shadow: 5px 5px 66px -9px rgba(179, 179, 179, 1);
-  box-shadow: 5px 5px 66px -9px rgba(179, 179, 179, 1);
-}
-
-.screen-image1 {
-  background-image: url("img/img1.png");
-}
-
-.screen-image2 {
-  background-image: url("img/img2.png");
-}
-
-.screen-image3 {
-  background-image: url("img/img3.png");
-}
-
 /* style dla planszy CO DAJE FASTFOOD  */
 
 .summary-board,
@@ -379,7 +278,6 @@ body {
 }
 
 .summary-plan-list li {
-  list-style: none;
   padding-bottom: 10px;
   display: flex;
   align-items: center;
@@ -390,6 +288,104 @@ body {
   background-color: #ffa042;
   border-radius: 50%;
   margin-right: 15px;
+}
+
+/* PLANSZE O PERSONACH */
+
+.section-overlay {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  color: rgba(0, 0, 0, 0.8);
+  padding: 50px 0;
+}
+
+.section-overlay-persona1 {
+  background-color: #eeecec;
+}
+
+.section-overlay-persona2 {
+  background-color: #d6d6d6;
+}
+
+.section-content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.section-content-persona2 {
+  align-items: flex-end;
+}
+
+.section-field {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: space-evenly;
+  height: 100%;
+  width: 70%;
+  padding: 80px 0;
+}
+
+.section-queries {
+  display: flex;
+  flex-direction: column;
+  font-size: 18px;
+  margin-bottom: 55px;
+}
+
+.section-description {
+  font-size: 15px;
+  padding: 20px 30px;
+}
+
+.section-queries li {
+  text-decoration: none;
+}
+
+.section-title-field {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.section-title {
+  font-size: 30px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  color: #ff7402;
+  margin-bottom: 45px;
+  text-align: center;
+}
+
+.slogan {
+  color: #000000da;
+  font-size: 38px;
+}
+
+.screen-image1,
+.screen-image2,
+.screen-image3 {
+  background-size: cover;
+  width: 300px;
+  height: 550px;
+
+  -webkit-box-shadow: 5px 5px 66px -9px rgba(179, 179, 179, 1);
+  -moz-box-shadow: 5px 5px 66px -9px rgba(179, 179, 179, 1);
+  box-shadow: 5px 5px 66px -9px rgba(179, 179, 179, 1);
+}
+
+.screen-image1 {
+  background-image: url("img/img1.png");
+}
+
+.screen-image2 {
+  background-image: url("img/img2.png");
+}
+
+.screen-image3 {
+  background-image: url("img/img3.png");
 }
 
 /* style dla NEWSLETTERA/FOOTER*/
@@ -480,10 +476,6 @@ body {
 .gallery-field {
   flex-direction: column;
   background-color: #c7e2e0;
-}
-
-.gallery {
-  overflow-x: hidden !important;
 }
 
 .gallery-img {
