--- a/style.css
+++ b/style.css
@@ -108,10 +108,6 @@ li {
   background-color: #e6e3e3;
 }
 
-.small-text {
-  font-size: 14px;
-}
-
 .section-arrow {
   color: black !important;
   font-size: 30px !important;
@@ -125,7 +121,6 @@ li {
 }
 
 .summary-subtitle {
-  opacity: 0.7;
   padding: 20px 0;
   font-weight: 600;
   color: #003b36;
@@ -240,9 +235,8 @@ li {
 .section-field {
   align-content: center;
   justify-content: space-evenly;
-  height: 100%;
   width: 70%;
-  padding: 80px 0;
+  padding: 20px 0;
 }
 
 .section-queries {
@@ -254,10 +248,6 @@ li {
   padding: 20px 30px;
 }
 
-.section-queries li {
-  text-decoration: none;
-}
-
 .section-title {
   font-size: 35px;
   padding-bottom: 50px;
@@ -265,7 +255,7 @@ li {
 
 .section-title-query {
   font-family: "Montserrat", sans-serif;
-  font-size: 30px;
+  font-size: 26px;
   font-weight: 700;
   color: #ff7402;
   margin-bottom: 45px;
@@ -314,7 +304,6 @@ li {
 }
 
 .newsletter-content {
-  font-size: 16px;
   letter-spacing: 1px;
 }
 
@@ -357,8 +346,7 @@ li {
 
 /*Style dla GALERII*/
 
-.gallery-field,
-.gallery {
+.gallery-field {
   padding-top: 50px;
 }
 
@@ -491,15 +479,10 @@ li {
   text-align: center;
 }
 
-/*
-.newsletter-mail,
-.button,
-.section-start-content p,
-.section-queries {
-  font-size: 18px;
-}
-*/
-
 .greater-text {
   font-size: 18px;
+}
+
+.small-text {
+  font-size: 14px;
 }
