--- a/style.css
+++ b/style.css
@@ -12,9 +12,12 @@ li {
 }
 
 .menu-nav {
-  background-color: #f3f1f1;
+  background-color: rgba(238, 245, 241, 0.829);
   padding: 30px 50px;
   position: relative;
+  -webkit-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.7);
+  -moz-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.7);
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.7);
 }
 
 .menu-nav a {
@@ -29,6 +32,13 @@ li {
 .button {
   color: rgba(255, 255, 255, 0.9);
   padding: 15px 45px;
+  background-color: #ff6502;
+  position: absolute;
+  right: 70px;
+  top: 15px;
+}
+
+.button:hover {
   background-image: linear-gradient(
     to bottom,
     #ff6502,
@@ -37,19 +47,34 @@ li {
     #ff8100,
     #ff8902
   );
-  position: absolute;
-  right: 70px;
-  top: 15px;
 }
 
 /* TOP BAR */
 .topbar {
-  background-color: #eeecec;
+  position: relative;
   padding: 40px 20px;
+
+  background-color: #085a4c71;
 }
 
 .topbar-content {
   width: 100%;
+}
+
+.topbar::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-image: url("img/background-top.jpg");
+  background-size: contain;
+  background-attachment: fixed;
+  width: 100%;
+  height: 100%;
+  opacity: 0.9;
+
+  z-index: -1;
 }
 
 .topbar-inf,
@@ -64,18 +89,18 @@ li {
 
 .main-image {
   background-image: url("img/main-img.png");
-  height: 700px;
-  width: 400px;
+  height: 705px;
+  width: 405px;
 
-  -webkit-box-shadow: 5px 5px 66px -9px rgba(179, 179, 179, 1);
-  -moz-box-shadow: 5px 5px 66px -9px rgba(179, 179, 179, 1);
-  box-shadow: 5px 5px 66px -9px rgba(179, 179, 179, 1);
+  -webkit-box-shadow: 5px 5px 66px -9px rgba(0, 0, 0, 0.719);
+  -moz-box-shadow: 5px 5px 66px -9px rgba(0, 0, 0, 0.719);
+  box-shadow: 5px 5px 66px -9px rgba(0, 0, 0, 0.719);
 }
 
 /* PLANSZA STRARTOWA - CO TO, DLA KOGO */
 
 .section-start {
-  background-color: #91e9da;
+  background-color: #9ac7bd;
   padding: 60px 0;
 }
 
@@ -105,7 +130,7 @@ li {
 }
 
 .for-whom {
-  background-color: #e6e3e3;
+  background-color: #eef5f1;
 }
 
 .section-arrow {
@@ -162,7 +187,9 @@ li {
 }
 
 .summary-basic-inf-description {
-  padding: 25px 0;
+  padding: 35px 0;
+  width: 30vw;
+  font-size: 17px;
 }
 
 .summmary-basic-inf-ingredients,
@@ -176,6 +203,7 @@ li {
 
 .summmary-basic-inf-ingredients li {
   list-style: disc;
+  margin-bottom: 7px;
 }
 
 .summary-data {
@@ -275,6 +303,7 @@ li {
   font-weight: 700;
   color: #ff7402;
   margin-bottom: 45px;
+  text-align: left;
 }
 
 .slogan {
@@ -490,8 +519,7 @@ li {
 }
 
 .section-start-content p,
-.summary-subtitle,
-.section-title-query {
+.summary-subtitle {
   text-align: center;
 }
 
@@ -500,5 +528,9 @@ li {
 }
 
 .small-text {
-  font-size: 14px;
+  font-size: 15px;
+}
+
+.white-text {
+  color: #eef5f1;
 }
