--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   line-height: 2;
   font-size: 20px;
 
-  font-family: "Karla", sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 li {
@@ -96,6 +96,27 @@ li {
 
 /* PLANSZA STRARTOWA - CO TO, DLA KOGO */
 
+.tlo {
+  padding: 50px 0;
+
+  position: relative;
+}
+
+.tlo::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-image: url("img/tlo.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+  width: 100%;
+  height: 100%;
+  opacity: 0.8;
+  z-index: -1;
+}
+
 .section-start {
   /*background-color: #008c72;*/
 
@@ -134,7 +155,7 @@ li {
 .summary-board {
   padding: 60px 0;
   position: relative;
-  background-color: #03413b7c;
+  background-color: #03413ba9;
 }
 
 .summary-board::after {
@@ -160,15 +181,13 @@ li {
   font-family: "Lato";
 }
 
-.summary-basic-inf {
-  padding: 30px 0;
-  width: 50%;
-}
-
 .summary-basic-inf-name {
   font-size: 24px;
   letter-spacing: 2px;
   font-family: "Lato";
+}
+.box {
+  display: flex;
 }
 
 .summary-basic-inf-time-field {
@@ -181,10 +200,22 @@ li {
   padding-right: 10px;
 }
 
+.box {
+  width: 70vw;
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+  padding: 20px;
+}
+
+.summary-basic-inf-recipe {
+  flex: 1;
+}
+
 .summary-basic-inf-description {
-  padding: 35px 0;
-  width: 30vw;
-  font-size: 18px;
+  padding: 35px 30px;
+  font-size: 20px;
+  flex: 1;
 }
 
 .summmary-basic-inf-ingredients {
@@ -193,7 +224,6 @@ li {
 
 .summmary-basic-inf-ingredients li {
   list-style: disc;
-  margin-bottom: 10px;
 }
 
 .summary-data {
@@ -280,12 +310,7 @@ li {
 .section-description {
   font-size: 22px;
   padding: 20px 30px;
-  background-color: #ffb162;
   font-family: "Lato";
-}
-
-.section-description-persona2 {
-  background-color: #d9ebe6;
 }
 
 .section-title {
