--- a/hover.css
+++ b/hover.css
@@ -63,6 +63,6 @@
 .btn-hover:hover,
 .btn-hover:focus,
 .btn-hover:active {
-  background-color: #00ecd9;
+  background-color: #ff8902;
   color: white;
 }
