--- a/style.css
+++ b/style.css
@@ -63,9 +63,8 @@ li {
   position: absolute;
   top: 0;
   left: 0;
-  background-image: url("img/tloo.jpg");
+  background-image: url("img/topbar-background-main.jpg");
   background-size: cover;
-  width: 90%;
   background-attachment: fixed;
   width: 100%;
   height: 100%;
@@ -87,7 +86,6 @@ li {
 }
 
 .topbar-user-inf {
-  color: #fff;
   font-size: 16px;
   width: 60%;
   padding-top: 30px;
@@ -107,7 +105,7 @@ li {
   font-size: 55px;
 }
 
-.main-image {
+.topbar-main-image {
   background-image: url("img/main-img.png");
   height: 705px;
   width: 405px;
@@ -115,72 +113,6 @@ li {
   -webkit-box-shadow: 5px 5px 66px -9px rgba(0, 0, 0, 0.719);
   -moz-box-shadow: 5px 5px 66px -9px rgba(0, 0, 0, 0.719);
   box-shadow: 5px 5px 66px -9px rgba(0, 0, 0, 0.719);
-}
-
-/* PLANSZA STRARTOWA - CO TO, DLA KOGO */
-
-.tlo {
-  padding: 90px 0;
-  background-color: rgba(82, 45, 168, 0.589);
-
-  position: relative;
-}
-
-.tlo::after {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-image: url("img/tlo.jpg");
-  background-size: cover;
-  background-attachment: fixed;
-  width: 100%;
-  height: 100%;
-  opacity: 0.9;
-  z-index: -1;
-}
-
-.section-start {
-  /*background-color: #008c72;*/
-
-  background-color: white;
-  padding: 60px 0;
-}
-
-.section-start-field {
-  width: 60%;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
-}
-
-.section-start-content {
-  width: 15vw;
-  margin: 20px;
-}
-
-.board-icon {
-  font-size: 70px !important;
-  background-image: linear-gradient(
-    to bottom,
-    #ff6502,
-    #ff7614,
-    #ff8524,
-    #ff9333,
-    #ffa042
-  );
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-.for-whom {
-  background-color: #ffffff;
-  color: black;
-}
-
-.section-arrow {
-  color: black !important;
-  font-size: 30px !important;
 }
 
 /* PREVEW APP*/
@@ -215,7 +147,6 @@ li {
 .preview-element {
   width: 400px;
   height: 400px;
-
   background-size: cover;
 }
 
@@ -235,12 +166,48 @@ li {
   background-image: url(img/element4.png);
 }
 
+/* PLANSZA STRARTOWA - CO TO, DLA KOGO */
+
+.section-start {
+  background-color: #eeecec;
+  padding: 60px 0;
+}
+
+.section-start-field {
+  width: 60%;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+.section-start-content {
+  width: 15vw;
+  margin: 20px;
+}
+
+.board-icon {
+  font-size: 70px !important;
+  background-image: linear-gradient(
+    to bottom,
+    #ff6502,
+    #ff7614,
+    #ff8524,
+    #ff9333,
+    #ffa042
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.for-whom {
+  background-color: #eeececb7;
+}
+
 /* style dla planszy CO DAJE FASTFOOD  */
 
 .summary-board {
   padding: 60px 0;
   position: relative;
-  background-color: #6244906e;
+  background-color: #908f4431;
 }
 
 .summary-board::after {
@@ -249,7 +216,7 @@ li {
   position: absolute;
   top: 0;
   left: 0;
-  background-image: url("img/x.jpg");
+  background-image: url("img/summary-background.jpg");
   background-size: cover;
   background-attachment: fixed;
   width: 100%;
@@ -405,9 +372,11 @@ li {
   line-height: 1.5;
 }
 
+/*
+
 .section-title-background {
-  background-color: #ffffff;
-}
+  background-color: #eeececb7;
+}*/
 
 .section-title-query {
   font-family: "Montserrat", sans-serif;
@@ -423,9 +392,7 @@ li {
   font-size: 38px;
 }
 
-.screen-image1,
-.screen-image2,
-.screen-image3 {
+.section-screen-image {
   width: 350px;
   height: 550px;
 
@@ -455,15 +422,15 @@ li {
   z-index: -1;
 }
 
-.screen-image1 {
+.screen1 {
   background-image: url("img/img1.png");
 }
 
-.screen-image2 {
+.screen2 {
   background-image: url("img/img2.png");
 }
 
-.screen-image3 {
+.screen3 {
   background-image: url("img/img3.png");
 }
 
@@ -473,6 +440,7 @@ li {
   background-color: #624490da;
   padding: 50px;
   position: relative;
+  color: #eeececb7;
 }
 
 .footer:after {
@@ -663,10 +631,8 @@ li {
 }
 
 .gallery-img,
-.main-image,
-.screen-image1,
-.screen-image2,
-.screen-image3 {
+.topbar-main-image,
+.section-screen-image {
   background-size: cover;
   background-repeat: no-repeat;
 }
